--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "culqi/culqi-php": "^2.0",
         "dasundev/livewire-dropzone": "^1.0",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
@@ -16,6 +17,7 @@
         "livewire/livewire": "^3.4",
         "lorisleiva/laravel-actions": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/eloquent-sortable": "^4.3",
         "spatie/laravel-settings": "^3.3",
         "spatie/laravel-sluggable": "^3.6",
