Sincronización de parámetros

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SGE_URL="https://registrationprueba.apecperu.pe/portal/apec/sisgestorevento.nsf/API_REST.xsp"
+SGE_USER="apec2024.comex"
+SGE_PASSWORD="12345678"
