--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
@@ -15,6 +16,7 @@
     },
     "dependencies": {
         "@dasundev/livewire-dropzone-styles": "^1.0.7",
+        "@ksedline/turnjs": "^0.1.0",
         "@splidejs/splide": "^4.1.4",
         "moment": "^2.30.1"
     }
