--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@khoohaoyit/tailwind-grid-center": "^0.0.5",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "jquery": "^3.7.1",
