--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "bezhansalleh/filament-google-analytics": "^2.0",
+        "bezhansalleh/filament-shield": "^3.2",
         "culqi/culqi-php": "^2.0",
         "dasundev/livewire-dropzone": "^1.0",
         "filament/filament": "^3.2",
@@ -21,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/eloquent-sortable": "^4.3",
+        "spatie/laravel-permission": "^6.8",
         "spatie/laravel-settings": "^3.3",
         "spatie/laravel-sluggable": "^3.6",
         "valentin-morice/filament-json-column": "^1.3",
