--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@khoohaoyit/tailwind-grid-center": "^0.0.5",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "esbuild": "^0.21.5",
         "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
