--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "culqi/culqi-php": "^2.0",
         "dasundev/livewire-dropzone": "^1.0",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-settings-plugin": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
